# skill-scanner

./: .env.example  CONTRIBUTING.md  SECURITY.md  TESTING.md  pyproject.toml
.github/workflows/: integration-tests.yml  python-tests.yml  release.yml
docs/: api-server.md  architecture.md  developing.md  remote-skills-analysis.md  threat-taxonomy.md
docs/architecture/analyzers/: llm-analyzer.md
docs/reference/: cli-command-reference.md  configuration-reference.md  dependencies-and-llm-providers.md
docs/user-guide/: installation-and-configuration.md  python-sdk.md
evals/: benchmark_runner.py  eval_runner.py
examples/: api_usage.py  integration_example.py  programmatic_usage.py
scripts/: generate_reference_docs.py  pre-commit-hook.sh
skill_scanner/cli/: cli.py
skill_scanner/config/: config.py
skill_scanner/core/: analyzer_factory.py  models.py  repo_fetcher.py
skill_scanner/core/analyzers/: llm_analyzer.py  llm_provider_config.py  llm_request_handler.py  llm_request_options.py  meta_analyzer.py
skill_scanner/core/analyzers/behavioral/alignment/: alignment_llm_client.py
skillanalyzer/: __init__.py
skillanalyzer/api/: api_cli.py  api_server.py  router.py
skillanalyzer/cli/: cli.py
skillanalyzer/config/: __init__.py  config_parser.py  constants.py
skillanalyzer/core/: exceptions.py  models.py
skillanalyzer/core/analyzers/: __init__.py  aidefense_analyzer.py  cross_skill_analyzer.py  meta_analyzer.py  static.py
skillanalyzer/core/reporters/: markdown_reporter.py  table_reporter.py
skillanalyzer/core/static_analysis/: context_extractor.py
skillanalyzer/core/static_analysis/parser/: python_parser.py
skillanalyzer/data/prompts/: boilerplate_protection_rule_prompt.md  code_alignment_threat_analysis_prompt.md  skill_meta_analysis_prompt.md  skill_threat_analysis_prompt.md
skillanalyzer/data/rules/: signatures.yaml
skillanalyzer/hooks/: pre_commit.py
skillanalyzer/utils/: logging_config.py
tests/: test_api_endpoints.py  test_cli_formats.py  test_cli_scan_repo.py  test_config.py  test_issue_fixes.py  test_llm_analyzer.py  test_llm_request_handler.py  test_meta_analyzer.py  test_models.py
tests/behavioral/: test_alignment_llm_client.py
